Agregado de fotos, corrección de errores, animaciones en páginas, arreglo de mediaqueries

--- a/index.html
+++ b/index.html
@@ -69,29 +69,17 @@
                     </p>
                 </div>
             </div>
-            <div class="inicio">
-                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche">
-                </div>
-                <div>
-                    <h3 class="inicio_titulo">¿Por qué veganismo?</h3>
-                    <p class="inicio_texto">El veganismo es una filosofía y forma de vida que busca excluir, en la
-                        medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los
-                        animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.
-                    </p>
-                </div>
-            </div>
+
             <div class="inicio">
                 <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Oreos clásicas"></div>
                 <div>
                     <h3 class="inicio_titulo">Oreos veganas</h3>
-                    <p class="inicio_texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, sint?
-                        Sequi ipsa cum natus. Obcaecati, deleniti, sint neque recusandae facilis blanditiis earum
-                        molestiae veniam nemo eveniet maxime in, quia aperiam.
+                    <p class="inicio_texto">Las oreos clásicas son veganas y todos los veganos son felices por eso. Es de los productos que los especistas, es decir los no veganos, no creen que esta galletita sea 100% de origen vegetal.
                     </p>
                 </div>
             </div>
             <div class="inicio">
-                <div class="inicio__img"><img src="./imagenes/ladov.jpeg" alt="Foto del restaurant"></div>
+                <div class="inicio__img"><img src="./imagenes/ladov.jpg" alt="Foto del restaurant"></div>
                 <div>
                     <h3 class="inicio_titulo">Restaurant recomedado</h3>
                     <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de
@@ -119,9 +107,7 @@
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
-                    <li>
-                        <div class="navegador"><a href="index.html">Inicio</a></div>
-                    </li>
+                    <li><a class="footer__link" href="index.html">Inicio</a></li>
                     <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
                     <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
                     <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
@@ -132,9 +118,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Tik tok</li>
+                    <li class="footer__link">Facebook</li>
+                    <li class="footer__link">Instagram</li>
+                    <li class="footer__link">Tik tok</li>
                 </ul>
             </div>
 
