--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <meta name="description"
+        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -53,104 +54,105 @@
     <main>
         <h2 class="titulo__pagina">Información vegana</h2>
         <section class="informacion1">
-            <h2 class="informacion__titulo">Qué es ser vegano?</h2>
-            <p class="informacion__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum minima quas adipisci animi dolores
-                voluptates aliquid, architecto suscipit earum error? Omnis optio vero officia ea corrupti. Vitae,
-                praesentium facilis.</p>
+            <h2 class="informacion1__titulo">Qué es ser vegano?</h2>
+            <p class="informacion1__texto">El veganismo es una filosofía y forma de vida que busca excluir, en la medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.</p>
         </section>
 
-        <h3>Algunas preguntas frecuentes</h3>
+        <h3 class="subtitulo__pagina">Algunas preguntas frecuentes</h3>
         <section class="informacion">
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Debo suplementarme?</h4>
-                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
-                    consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
-                    vel cum nulla quis pariatur?</p>
+                <p class="informacion__texto">Una alimentación basada en plantas, controlada, es capaz de brindarte
+                    todos las vitaminas y minerales necesarios para un correcto funcionamiento del cuerpo. A excepción
+                    de la vitamina B12 que debe suplementarse</p>
             </article>
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Qué son las trazas?</h4>
-                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
-                    consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
-                    vel cum nulla quis pariatur?</p>
+                <p class="informacion__texto">Esto es lo que tiende a confundir a la gente al principio ya que, que un
+                    producto tenga trazas de origen animal, no implica que el producto no sea vegetal. Esto se debe a
+                    que las trazas se indican para las personas con alergias a dichos ingredientes pero es debido a una
+                    contaminación cruzada por el uso de la misma maquinaria. Esto quiere decir que el producto en sí, no
+                    tiene dichos ingredientes como parte de la preparación.</p>
             </article>
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Y ahora? De donde saco el calcio?</h4>
-                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
-                    consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
-                    vel cum nulla quis pariatur?</p>
+                <p class="informacion__texto">Cuando hablamos de calcio es común pensar en la leche de vaca. Sin embargo es un mineral que se encuentra en el mundo vegetal inclusive superando al aporte de la leche, dentro de los alimentos más ricos en este mineral podemos encontrar las almendras, semillas de sésamo, brocoli, garbanzos, como así también en bebidas vegetales y tofu que son enriquecidos.</p>
             </article>
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Dieta vegana = 0 colesterol</h4>
-                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
-                    consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
-                    vel cum nulla quis pariatur?</p>
+                <p class="informacion__texto">Saber que una alimentación basada en plantas involucra una ingesta de 0%
+                    colesterol es uno de los tantos beneficios de no consumir animales. Este dato nos ayuda a descartar
+                    alimentos que no sean veganos , ya que al leer las etiquetas y detectar algún porcentaje de
+                    colesterol, ya podemos definir que dicho producto con tiene ingredientes de origen animal.</p>
             </article>
         </section>
 
-        <h3>Creadores de recetas veganas</h3>       
+        <h3 class="subtitulo__pagina">Creadores de recetas veganas</h3>
         <section class="creadores">
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <img class="creadores__img" src="../imagenes/soyvelen.jpeg" alt="">
                 <h4 class="creadores__titulo">Soyvelen</h4>
                 <a class="creadores__link" href="https://www.instagram.com/soyvelen/?hl=es">@Soyvelen</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <img class="creadores__img" src="../imagenes/nutriloca.jpeg" alt="">
                 <h4 class="creadores__titulo">Nutriloca</h4>
                 <a class="creadores__link" href="https://www.instagram.com/nutriloca/?hl=es">@Nutriloca</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <img class="creadores__img" src="../imagenes/midiariovegan.jpeg" alt="">
                 <h4 class="creadores__titulo">Milagros</h4>
                 <a class="creadores__link" href="https://www.instagram.com/midiariovegan/?hl=es-la">@midiariovegan</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <img class="creadores__img" src="../imagenes/veganaarg.jpeg" alt="">
                 <h4 class="creadores__titulo">Veganaarg</h4>
                 <a class="creadores__link" href="https://www.instagram.com/vegana.arg/?hl=es">@vegana.arg</a>
             </article>
         </section>
-        <section class="activistas">
-            <h3>Activistas veganos</h3>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Soledad Barruti</h3>
-                <h4>@solesbarruti</h4>
+
+        <h3 class="subtitulo__pagina">Activistas veganos</h3>
+        <section class="activistas"> 
+            <article class="activistas__card">
+                <img class="activistas__img" src="../imagenes/soledadbarruti.jpeg" alt="">
+                <h3 class="activistas__titulo">Soledad Barruti</h3>
+                <h4 class="activistas__link">@solesbarruti</h4>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Rocío Hernandez</h3>
-                <h4>@nutriloca</h4>
+            <article class="activistas__card">
+                <img class="activistas__img" src="../imagenes/nutriloca.jpeg" alt="">
+                <h3 class="activistas__titulo">Rocío Hernandez</h3>
+                <h4 class="activistas__link">@nutriloca</h4>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Fernando Pieroni</h3>
-                <h4>@ferpieroni</h4>
+            <article class="activistas__card">
+                <!-- <img class="activistas__img" src="../imagenes/fernandopieroni.jpeg" alt=""> -->
+                <img class="activistas__img" src="../imagenes/nutriloca.jpeg" alt="">
+                <h3 class="activistas__titulo">Fernando Pieroni</h3>
+                <h4 class="activistas__link">@ferpieroni</h4>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Dra. Evelyn Re</h3>
-                <h4>@dra.evelynre</h4>
+            <article class="activistas__card">
+                <img class="activistas__img" src="../imagenes/evelynre.jpeg" alt="">
+                <h3 class="activistas__titulo">Dra. Evelyn Re</h3>
+                <h4 class="activistas__link">@dra.evelynre</h4>
             </article>
         </section>
 
+        <h3 class="subtitulo__pagina">Documentales y videos recomendados</h3>
         <section class="documentales">
-            <h2>Documentales y videos recomendados</h2>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>What the health</h3>
+            <article class="documentales__card">
+                <img class="documentales__img" src="../imagenes/whatthehealth.jpeg" alt="">
+                <h3 class="documentales__titulo">What the health</h3>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Cowspiracy</h3>
+            <article class="documentales__card">
+                <img class="documentales__img" src="../imagenes/cowspiracy.jpeg" alt="">
+                <h3 class="documentales__titulo">Cowspiracy</h3>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Earthlings</h3>
+            <article class="documentales__card">
+                <img class="documentales__img" src="../imagenes/earthlings.jpeg" alt="">
+                <h3 class="documentales__titulo">Earthlings</h3>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Dominion</h3>
+            <article class="documentales__card">
+                <img class="documentales__img" src="../imagenes/dominion.jpeg" alt="">
+                <h3 class="documentales__titulo">Dominion</h3>
             </article>
         </section>
 
@@ -161,9 +163,7 @@
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
-                    <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
-                    </li>
+                    <li><a class="footer__link" href="../index.html">Inicio</a></li>
                     <li><a class="footer__link" href="./informacion.html">Información</a></li>
                     <li><a class="footer__link" href="./productos.html">Productos</a></li>
                     <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
@@ -174,9 +174,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Tik tok</li>
+                    <li class="footer__link">Facebook</li>
+                    <li class="footer__link">Instagram</li>
+                    <li class="footer__link">Tik tok</li>
                 </ul>
             </div>
 
