--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -55,159 +55,117 @@
         <h3 class="titulo-zona">CABA</h3>
         <section class="zona">   
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 1</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/ladov.jpg" alt="">
+                <h4 class="zona__titulo">Lado V</h4>
+                <p class="zona__descripcion">Honduras 4969</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 2</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/ainara.jpg" alt="">
+                <h4 class="zona__titulo">Ainara</h4>
+                <p class="zona__descripcion">Charcas 4987</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/gordovegano.jpg" alt="">
+                <h4 class="zona__titulo">Gordo Vegano</h4>
+                <p class="zona__descripcion">Etcheverria 3078</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/koi.jpg" alt="">
+                <h4 class="zona__titulo">Koi Dumplings</h4>
+                <p class="zona__descripcion">Lavalleja 1387</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/Letitv.jpg" alt="">
+                <h4 class="zona__titulo">Letit V</h4>
+                <p class="zona__descripcion">Costa Rica 5865</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/spikalion.jpg" alt="">
+                <h4 class="zona__titulo">Spikalion</h4>
+                <p class="zona__descripcion">Rio Bamba 485</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/veganfox.jpg" alt="">
+                <h4 class="zona__titulo">Vegan Fox</h4>
+                <p class="zona__descripcion">Gorriti 5213</p>
             </article>
         </section>
 
         <h3 class="titulo-zona">Neuquén</h3>
         <section class="zona">   
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 1</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/cuchi.jpeg" alt="">
+                <h4 class="zona__titulo">Cuchi</h4>
+                <p class="zona__descripcion">Roca 89</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 2</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/oliver.jpeg" alt="">
+                <h4 class="zona__titulo">Oliver</h4>
+                <p class="zona__descripcion">Belgrano 96</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/growler.jpeg" alt="">
+                <h4 class="zona__titulo">Growler</h4>
+                <p class="zona__descripcion">Elordi 81</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/oss.jpeg" alt="">
+                <h4 class="zona__titulo">OSS</h4>
+                <p class="zona__descripcion">Luis Beltran 1041</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/franzypeponne.jpeg" alt="">
+                <h4 class="zona__titulo">Franz y Peppone</h4>
+                <p class="zona__descripcion">Brown 434</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/lamargarita.jpeg" alt="">
+                <h4 class="zona__titulo">La Margarita</h4>
+                <p class="zona__descripcion">Santa Fe 427</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/panypunto.jpeg" alt="">
+                <h4 class="zona__titulo">Pan y punto</h4>
+                <p class="zona__descripcion">Bueno Aires 326</p>
             </article>
         </section>
 
         <h3 class="titulo-zona">Cordoba</h3>
         <section class="zona">   
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 1</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/elefantebengal.jpeg" alt="">
+                <h4 class="zona__titulo">Elefante Bengal</h4>
+                <p class="zona__descripcion">Fructuoso Rivera 224</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 2</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/servario.jpeg" alt="">
+                <h4 class="zona__titulo">Servario</h4>
+                <p class="zona__descripcion">Echenique 2066</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/bullanga.jpeg" alt="">
+                <h4 class="zona__titulo">Bullanga</h4>
+                <p class="zona__descripcion">Caseros 308</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/happinessclub.jpeg" alt="">
+                <h4 class="zona__titulo">Happiness Club</h4>
+                <p class="zona__descripcion">Independencia 849</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/chillifood.jpeg" alt="">
+                <h4 class="zona__titulo">Chilli Food</h4>
+                <p class="zona__descripcion">Fructioso Rivera 273</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/deaveras.jpeg" alt="">
+                <h4 class="zona__titulo">De a Deveras</h4>
+                <p class="zona__descripcion">Obispo Salguero 599</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/imagen.png" alt="">
-                <h4 class="zona__titulo">Restaurant 3</h4>
-                <p class="zona__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci autem sapiente ab, ipsa in sed
-                    consectetur deserunt non nisi unde pariatur dolor libero amet minus officiis ratione natus
-                    reprehenderit cum.</p>
+                <img class="zona__img" src="../imagenes/otifocacceria.jpeg" alt="">
+                <h4 class="zona__titulo">Oti Focacceria</h4>
+                <p class="zona__descripcion">Bolivia 281</p>
             </article>
         </section>
 
@@ -219,9 +177,7 @@
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
-                    <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
-                    </li>
+                    <li><a class="footer__link" href="../index.html">Inicio</a></li>
                     <li><a class="footer__link" href="./informacion.html">Información</a></li>
                     <li><a class="footer__link" href="./productos.html">Productos</a></li>
                     <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
@@ -232,9 +188,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Tik tok</li>
+                    <li class="footer__link">Facebook</li>
+                    <li class="footer__link">Instagram</li>
+                    <li class="footer__link">Tik tok</li>
                 </ul>
             </div>
 
