--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -79,25 +79,16 @@
             <h3 class="subtitulo__pagina">Argentina</h3>
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">A los 19 años creo el primer alfajor vegano del pais y hoy vende 1 millon por año</h4>
+                    <p class="noticias2__texto">Lucia Mariño que se frustraba por no encontrar productos veganos y creó en su casa, una pyme que hasta llegó a Miami. Se trata de los alfajores de Un Rincon Vegano, nombre que inventó por esa denodada busqueda de contar con algun lugarcito en algún anaquel.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">El bife vegano que gana cada vez mas lugar en los restaurantes porteños</h4>
+                    <p class="noticias2__texto">En el 2023 fue el año en que la melena de leon desembarcó fuerte en los restaurantes. En "Marti Barra", el restaurante vegetariano de Martitegui, es un plato que está entre los mas pedidos. Fue el punto cúlmine del menú con el que el chef presento a fin de diciembre el libro de su "Proyecto Tierras", y no hubo un invitado que no quedará fascinado con ese bife que no era bife.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">Como es la "Ley Lipovetzky" que promueve la comida vegana en restaurantes</h4>
+                    <p class="noticias2__texto">La ley provincial de alimentación vegetariana y vegana, busca promover el derecho a la igualdad de todos los consumidores para una libre elección en sus comidas. Con esta ley se lorgrá dar mayor libertad a nuestros consumidores, sobre todo a los jovenes, y por ende también conseguimos defender a nuestros animales.</p>
                 </div>
             </div>
         </section>
@@ -108,25 +99,16 @@
             <h3 class="subtitulo__pagina">Del mundo</h3>
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">Subway saca un nuevo Teriyaki Veg</h4>
+                    <p class="noticias2__texto">Subway Mexico sacó una nueva opcion vegana en este 2024, con proteína 100% vegetal y con el riquisimo sabor de siempre</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">Veganuary</h4>
+                    <p class="noticias2__texto">"La revolución comienza en enero. Unete a los vegetales. Prueba el veganismo este enero." Estos son los títulos de los anuncios de la orgnización originaria de reino unido, que invita a la gente a probar el veganismo y reparten información de forma gratuita para hacer mas facil la transición a este tipo de alimentación. En la información se encuentran recetas, información, lista de compras y mucho más.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
-                    <h4 class="noticias2__titulo">Noticia 1</h4>
-                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
-                        ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
-                        doloremque, iure eum incidunt sequi a.</p>
+                    <h4 class="noticias2__titulo">Holanda le dice adios a las publicidades de Carnes</h4>
+                    <p class="noticias2__texto">Holanda se enfocara en frenar el cambio climático y aplicará una medida especial sobre la carne. Las empresas ya no tendrán un espacio en la calle. La medida afectara a toda la carne procedente de la ganadería intensiva, esto incluye la publicidad de las cadenas de comidas rapidas.</p>
                 </div>
             </div>
 
@@ -138,9 +120,7 @@
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
-                    <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
-                    </li>
+                    <li><a class="footer__link" href="../index.html">Inicio</a></li>
                     <li><a class="footer__link" href="./informacion.html">Información</a></li>
                     <li><a class="footer__link" href="./productos.html">Productos</a></li>
                     <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
@@ -151,9 +131,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Tik tok</li>
+                    <li class="footer__link">Facebook</li>
+                    <li class="footer__link">Instagram</li>
+                    <li class="footer__link">Tik tok</li>
                 </ul>
             </div>
 
