--- a/pages/productos.html
+++ b/pages/productos.html
@@ -81,31 +81,31 @@
             <div class="producto">
                 <article class="producto__card">
                     <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
-                    <h3>Oreos clásicas</h3>
+                    <h3 class="producto__titulo">Oreos clásicas</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
-                    <h3>Veggie Snack <br> Granix</h3>
+                    <h3 class="producto__titulo">Veggie Snack <br> Granix</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
-                    <h3>Pepas vegetal <br> Trio</h3>
+                    <h3 class="producto__titulo">Pepas vegetal <br> Trio</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/rapiditas.jpeg" alt="Rapiditas">
-                    <h3>Rapiditas</h3>
+                    <h3 class="producto__titulo">Rapiditas</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
-                    <h3>Oreos clásicas</h3>
+                    <h3 class="producto__titulo">Oreos clásicas</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
-                    <h3>Veggie Snack <br> Granix </h3>
+                    <h3 class="producto__titulo">Veggie Snacks <br> Granix </h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
-                    <h3>Pepas vegetal <br> Trio </h3>
+                    <h3 class="producto__titulo">Pepas vegetal <br> Trio </h3>
                 </article>
             </div>
         </section>
@@ -115,35 +115,35 @@
             <div class="producto">
                 <article class="producto__card">
                     <img src="../imagenes/serumacf.jpeg" alt="Serum">
-                    <h3>Serum ACF</h3>
+                    <h3 class="producto__titulo">Serum ACF</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
-                    <h3>Agua micelar <br> Garnier</h3>
+                    <h3 class="producto__titulo">Agua micelar <br> Garnier</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
-                    <h3>Protector solar <br> Villanueve</h3>
+                    <h3 class="producto__titulo">Protector solar <br> Villanueve</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
-                    <h3>Crema todo día <br> Natura</h3>
+                    <h3 class="producto__titulo">Crema todo día <br> Natura</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/serumacf.jpeg" alt="Serum">
-                    <h3>Serum ACF</h3>
+                    <h3 class="producto__titulo">Serum ACF</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
-                    <h3>Agua micelar <br> Garnier</h3>
+                    <h3 class="producto__titulo">Agua micelar <br> Garnier</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
-                    <h3>Protector solar <br> Villanueve</h3>
+                    <h3 class="producto__titulo">Protector solar <br> Villanueve</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
-                    <h3>Crema todo día <br> Natura</h3>
+                    <h3 class="producto__titulo">Crema todo día <br> Natura</h3>
                 </article>
             </div>
         </section>
@@ -153,35 +153,35 @@
             <div class="producto">
                 <article class="producto__card">
                     <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
-                    <h3>Labial <br> Todo Moda</h3>
+                    <h3 class="producto__titulo">Labial <br> Todo Moda</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
-                    <h3>Corrector <br> Rimmel </h3>
+                    <h3 class="producto__titulo">Corrector <br> Rimmel </h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
-                    <h3>Delineador <br> Natura</h3>
+                    <h3 class="producto__titulo">Delineador <br> Natura</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
-                    <h3>Esmalte <br> Kiki Pronails</h3>
+                    <h3 class="producto__titulo">Esmalte <br> Kiki Pronails</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
-                    <h3>Labial <br> Todo Moda</h3>
+                    <h3 class="producto__titulo">Labial <br> Todo Moda</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
-                    <h3>Corrector <br> Rimmel </h3>
+                    <h3 class="producto__titulo">Corrector <br> Rimmel </h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
-                    <h3>Delineador <br> Natura</h3>
+                    <h3 class="producto__titulo">Delineador <br> Natura</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
-                    <h3>Esmalte <br> Kiki Pronails</h3>
+                    <h3 class="producto__titulo">Esmalte <br> Kiki Pronails</h3>
                 </article>
             </div>
         </section>
@@ -191,27 +191,27 @@
             <div class="producto">
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Gorrión carteras">
-                    <h3>Gorrión <br> Carteras</h3>
+                    <h3 class="producto__titulo">Gorrión <br> Carteras</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Indica Shoes calzado">
-                    <h3>Indica Shoes<br> Calzado </h3>
+                    <h3 class="producto__titulo">Indica Shoes<br> Calzado </h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Santa Clara carteras">
-                    <h3>Santa Clara <br> Carteras</h3>
+                    <h3 class="producto__titulo">Santa Clara <br> Carteras</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
-                    <h3>Maitina <br> Calzado</h3>
+                    <h3 class="producto__titulo">Maitina <br> Calzado</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
-                    <h3>Maitina <br> Calzado</h3>
+                    <h3 class="producto__titulo">Maitina <br> Calzado</h3>
                 </article>
                 <article class="producto__card">
                     <img src="../imagenes/imagen.png" alt="Maitina calzado">
-                    <h3>Maitina <br> Calzado</h3>
+                    <h3 class="producto__titulo">Maitina <br> Calzado</h3>
                 </article>
             </div>
         </section>
@@ -223,9 +223,7 @@
             <div class="footer__nav">
                 <h4>Pagina vegana</h4>
                 <ul>
-                    <li>
-                        <div class="navegador"><a href="../index.html">Inicio</a></div>
-                    </li>
+                    <li><a class="footer__link" href="../index.html">Inicio</a></li>
                     <li><a class="footer__link" href="./informacion.html">Información</a></li>
                     <li><a class="footer__link" href="./productos.html">Productos</a></li>
                     <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
@@ -236,9 +234,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li>Facebook</li>
-                    <li>Instagram</li>
-                    <li>Tik tok</li>
+                    <li class="footer__link">Facebook</li>
+                    <li class="footer__link">Instagram</li>
+                    <li class="footer__link">Tik tok</li>
                 </ul>
             </div>
 
